Fix: menu search working aind align center product Page

--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -85,7 +85,7 @@
     flex-wrap: wrap;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     gap: 20px;
     padding: 40px 20px;
     li{
